tests/errors/syn_class3.java
public class syn_class3 {
